# multichain-contracts-lottery

./: .gitignore  README.md  hardhat.config.js  package.json
cli/: package.json
cli/abi/: RaffleRegistration.json  bytecode
cli/metadata/: lotto_draw_multichain.json  lotto_registration_contract.json  lotto_registration_contract.wasm  lotto_registration_manager_contract.json  lotto_registration_manager_contract.wasm
cli/src/: config.ts  lottoCli.ts  lottoManager.ts  lottoRegistrationEvm.ts  lottoRegistrationWasm.ts  seed.ts  txHelper.ts
contracts/: LottoClient.sol  Raffle.sol  RewardManager.sol
evm/: README.md  hardhat.config.ts
evm/contracts/: LottoClient.sol  PhatRollupAnchor.sol  Raffle.sol  RaffleRegistration.sol
evm/scripts/: 0_display_info.ts  10_set_phat_attestor.ts  1a_config_attestor.ts  3_complete_raffle.ts  4_participate.ts  4_submit_results.ts  4a_get_results.ts  5_submit_no_winner.ts  6_send_results.ts  6_set_queue_head.ts
evm/test/: LottoClient.ts  PhatRollupAnchor.ts  RaffleRegistration.ts
evm/typechain-types/: hardhat.d.ts  index.ts
ink/: Cargo.toml  README.md
ink/artifacts/: lotto_registration_contract.contract  lotto_registration_contract.json  lotto_registration_contract.wasm  lotto_registration_manager_contract.contract  lotto_registration_manager_contract.json  lotto_registration_manager_contract.wasm
ink/integration_tests/: README.md  raffle_manager.rs  raffle_registration.rs
ink/logic/: README.md  error.rs  lib.rs  raffle_manager.rs  raffle_registration.rs
lotto_multichain/demo-synchronization/: package.json  tsconfig.json
lotto_multichain/evm/: hardhat.config.ts
migrations/: 1_deploy_contracts.js
pink/: README.md
pink/contract/: Cargo.toml  lib.rs
scripts/: 0_display_info.ts  1_config_start_raffle.ts  2_participate.ts  4a_get_results.ts
test/: LottoClient.js
(+179 files in other folders)
